--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Santa Tracker</title>
+    <title>Santa Tracker: Bringing the North Pole to You</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <h1>Santa Tracker</h1>
+    <p>Bringing the North Pole to you since 2015</p>
 </body>
 </html>
